# hexattack-raylib6x-gamejam

./: .gitignore  CMakeLists.txt  LICENSE.txt  Readme.md
src/: CMakeLists.txt  Game.cpp  Game.h  Info.plist  main.cpp  minshell.html
src/Core/: Animation.h  Animator.h  Assets.cpp  Assets.h  GameConfig.h  ResourceManager.cpp  ResourceManager.h
src/Entities/: Entity.cpp  Entity.h  SpriteEntity.cpp  SpriteEntity.h
src/Entities/Background/: Background.cpp  Background.h
src/Entities/Enemy/: Enemy.cpp  Enemy.h  EnemyPlatform.cpp  EnemyPlatform.h
src/Entities/Explosion/: Explosion.cpp  Explosion.h
src/Entities/Hexagon/: Hexagon.cpp  Hexagon.h
src/Entities/Player/: Bullet.cpp  Bullet.h  Player.cpp  Player.h
src/Managers/: CollisionManager.cpp  CollisionManager.h  GameState.cpp  GameState.h
src/resources/fonts/: hex-attack.fnt
src/resources/shaders/glsl100/: background.fs
src/resources/shaders/glsl330/: background.fs
